# window-manager

./: .gitignore  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  c-sharp-window-control.csproj  devenv  window-control.csproj
cfg/: basic.cs  config.cs
devenv/: .gitignore  Dockerfile  config  run
scripts/: forever
src/: AssemblyGenerator.cs  Desktop.cs  Event.cs  EventLoop.cs  Execute.cs  Graphics.cs  Hook.cs  Hotkey.cs  Input.cs  Instrument.cs  Key.cs  KeyHook.cs  Keys.cs  Lock.cs  Log.cs  Loop.cs  PriorityQueue.cs  Program.cs  Script.cs  Thread.cs  Time.cs  WinHook.cs  Window.cs  active_border.rs  colors.rs  desktop.rs  hotkey.rs  input.rs  keys.rs  lib.rs  main.rs  window.rs
src/VirtualDesktops/: ComObjects.cs
tools/: build  check  config  deploy
