[package]
name = "window-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_System_Threading", "Win32_Graphics_GdiPlus", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Accessibility"] }
#winapi = { version = "0.3.9", features = ["winuser", "windef", "errhandlingapi", "dwmapi", "processthreadsapi"] }
winvd = "0.0.46"
